--- a/app/src/main/res/layout/custom_spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/custom_spinner_dropdown_item.xml
@@ -5,6 +5,7 @@
     android:padding="8dp"
     android:textSize="16sp"
     android:fontFamily="sans-serif-medium"
+    android:background="@color/black"
     android:textColor="@color/white"
     android:ellipsize="end"
     android:singleLine="false"
