--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -81,6 +81,12 @@
                 android:layout_height="wrap_content"
                 android:text="Event Desciption"
                 android:textColor="@color/black" />
+            <Button
+                android:id="@+id/btnDelete"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Delete Event"
+                android:textColor="@color/white" />
 
 
 
