--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -65,37 +65,47 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="end"
-                    android:orientation="horizontal" >
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <ImageButton
+                        android:id="@+id/btnEvents"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/navbar_events"
+                        android:background="#0000"
+                        android:contentDescription="Go to EventList" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="1" />
 
                     <TextView
                         android:id="@+id/btnAddEvent"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:gravity="center"
-                        android:layout_gravity="end"
                         android:text="+"
                         android:textSize="25sp"
                         android:textColor="@color/black"
                         android:background="@drawable/calendar_day_background"
                         android:fontFamily="@font/montserrat_medium"
                         android:contentDescription="Go to Today" />
+
                     <TextView
                         android:id="@+id/btnToday"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:gravity="center"
                         android:layout_marginHorizontal="5dp"
-                        android:layout_gravity="end"
                         android:text="1"
                         android:textSize="16sp"
                         android:textColor="@color/black"
                         android:background="@drawable/calendar_day_background"
                         android:fontFamily="@font/montserrat_medium"
                         android:contentDescription="Go to Today" />
-
                 </LinearLayout>
-
 
                 <LinearLayout
                     android:layout_width="match_parent"
