--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/phinmaGreen"
+            app:titleTextAppearance="@style/CustomTopAppBarTitle"
             android:theme="@style/ThemeOverlay.Material3.Dark.ActionBar"
             app:navigationIcon="@drawable/ic_menu"
             app:navigationIconTint="@android:color/white"
@@ -31,15 +32,134 @@
             android:layout_below="@id/topAppBar"
             android:layout_above="@id/bottomNavigationView">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Welcome to PHINMA Student Handbook!"
-                android:gravity="center"
-                android:textSize="24sp"
-                android:fontFamily="@font/josefinsans_bold"
-                android:textColor="@color/black"
-                android:layout_gravity="center"/>
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="16dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center_horizontal">
+
+                    <!-- Greeting -->
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Welcome back to PHINMA Student Handbook!"
+                        android:fontFamily="@font/josefinsans_bold"
+                        android:textSize="24sp"
+                        android:padding="10dp"
+                        android:textColor="@color/black"/>
+
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:orientation="horizontal"-->
+<!--                        android:gravity="center"-->
+<!--                        android:padding="8dp">-->
+
+<!--                        <com.google.android.material.card.MaterialCardView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_margin="8dp"-->
+<!--                            app:cardCornerRadius="8dp"-->
+<!--                            app:cardElevation="4dp"-->
+<!--                            android:onClick="navigateToEvents">-->
+
+<!--                            <TextView-->
+<!--                                android:layout_width="wrap_content"-->
+<!--                                android:layout_height="wrap_content"-->
+<!--                                android:padding="16dp"-->
+<!--                                android:text="Events"-->
+<!--                                android:textSize="18sp"-->
+<!--                                android:textColor="@color/phinmaGreen"/>-->
+<!--                        </com.google.android.material.card.MaterialCardView>-->
+
+<!--                        <com.google.android.material.card.MaterialCardView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_margin="8dp"-->
+<!--                            app:cardCornerRadius="8dp"-->
+<!--                            app:cardElevation="4dp"-->
+<!--                            android:onClick="navigateToChat">-->
+
+<!--                            <TextView-->
+<!--                                android:layout_width="wrap_content"-->
+<!--                                android:layout_height="wrap_content"-->
+<!--                                android:padding="16dp"-->
+<!--                                android:text="Chat"-->
+<!--                                android:textSize="18sp"-->
+<!--                                android:textColor="@color/phinmaGreen"/>-->
+<!--                        </com.google.android.material.card.MaterialCardView>-->
+
+<!--                    </LinearLayout>-->
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:padding="10dp">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Upcoming Events"
+                            android:fontFamily="@font/josefinsans_regular"
+                            android:textSize="22sp"
+                            android:textColor="@color/black" />
+
+                        <ImageButton
+                            android:id="@+id/btnEvent"
+                            android:layout_width="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_right_arrow"
+                            android:background="@android:color/transparent"
+                            android:contentDescription="Next" />
+
+                    </LinearLayout>
+
+
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recycler_upcoming_events"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:nestedScrollingEnabled="false"/>
+
+                    <!-- Announcements Banner -->
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Announcements"
+                        android:textSize="22sp"
+                        android:fontFamily="@font/josefinsans_regular"
+                        android:padding="10dp"
+                        android:textColor="@color/black"/>
+
+                    <com.google.android.material.card.MaterialCardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
+                        app:cardCornerRadius="8dp"
+                        app:cardElevation="4dp">
+
+                        <TextView
+                            android:background="@color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="16dp"
+                            android:text="No new announcements at this time."
+                            android:fontFamily="@font/merriweather_regular"
+                            android:textSize="18sp"
+                            android:textColor="@color/black"/>
+                    </com.google.android.material.card.MaterialCardView>
+
+                </LinearLayout>
+            </ScrollView>
         </FrameLayout>
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
